Cleaned up index.css and changed id to class in index.ejs
Cleaned up and added comments on index.css.

modified class name in index.ejs for consistency.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,10 +24,10 @@
 
     <!-- Left Table -->
     <div class="dtLeft">
-        <table id="leftTable">
+        <table class="leftTable">
             <tr>
                 <!--Using same class name as right table to make them have the same width-->
-                <th class="From">Ride ID</th>
+                <th class="RideID">Ride ID</th>
                 <th class="From">From</th>
                 <th class="To">To</th>
                 <th class="Passengers">No. Passengers</th>
@@ -71,7 +71,7 @@
             <tr>
                 <!--Using same class name as left table to make them have the same width-->
                 <!-- move this outside the table so that it stays-->
-                <th class="From">Ride ID</th>
+                <th class="RideID">Ride ID</th>
                 <th class="From">From</th>
                 <th class="To">To</th>
                 <th class="Passengers">No. Passengers</th>
