--- a/views/index.css
+++ b/views/index.css
@@ -4,24 +4,24 @@ html,body{
     padding:0;
 }
 
-/*split pane styles*/
+/*split pane styles
+ Set width of each pane to 50% of the screen
+ Position has to be absolute to show the right pane
+ */
 .split{
     position:absolute;
     width:50%;
     height:100%;
-    /*padding:0.6em;*/
 }
 
 /* Left side*/
 .leftSplit{
-    left: 0;
-    width: 50%;
+    left: 0; /* placed at the left end */
 }
 
 /* Right side*/
 .rightSplit{
-    right:0;
-    width:50%;
+    right:0; /* placed at the right end */
 }
 
 
@@ -44,7 +44,7 @@ ul h3 {
     width: 100%;
     float: left;
     z-index: 0;
-    border-radius:10px;
+    border-radius:10px; /* make the corner round*/
     color: white;
 }
 
@@ -57,7 +57,7 @@ ul h3 {
     width: 100%;
     float: right;
     z-index: 0;
-    border-radius:10px;
+    border-radius:10px; /* make the corner round*/
     color:white;
 }
 
@@ -91,25 +91,28 @@ li a:hover {
 /* Table header- color and position*/
 th{
     background-color: #8B8E81;
-    position: sticky; top:0; /* Makes header stick to the top */
+    position: sticky; top:0; /* This keeps header at the top*/
 }
 
-/* td styles*/
+/* td styles */
 td{
     height: 50px; /* temp value for fixed height*/
-    max-width: 50px;
-    overflow:hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+    max-width: 150px; /* temp value for max-width*/
+
+    overflow:hidden; /* Prevent long text to overflow on other cells */
+    text-overflow: ellipsis; /* Ellipsis will hide text with "..." at the end */
+    white-space: nowrap; /* Prevent cell with long text to grow vertically */
 }
 
+/* left table styles */
 .dtLeft {
     width: 100%;
     float: left;
     table-layout: fixed;
-    overflow-y:scroll;
-    height: 100vh; /* necessary for scroll bar to work properly*/
     text-align: center;
+
+    overflow-y:scroll; /* vertical scroll */
+    height: 100vh; /* necessary for scroll bar to work properly*/
 
 }
 
@@ -122,20 +125,30 @@ td{
     border-radius: 10px;
     background: #f2f2f2;
 }
-/*making left scroll bar round*/
+/*making left scroll bar round shaped*/
 .dtLeft::-webkit-scrollbar-thumb {
     border-radius: 10px;
     background:#09C9D9;
 }
 
+/* alternate color of table entries*/
+.leftTable tr:nth-child(even) td{
+    background-color:#e0858e;
+}
 
+.leftTable tr:nth-child(odd) td{
+    background-color:#DCDCDC;
+}
+
+/* right table styles */
 .dtRight {
     width: 100%;
     float: left;
     table-layout: fixed;
-    overflow-y:scroll;
-    height:100vh; /* necessary for scroll bar to work properly*/
     text-align: center;
+
+    overflow-y:scroll; /* vertical scroll */
+    height:100vh; /* necessary for scroll bar to work properly*/
 }
 
 /*width of right scroll bar*/
@@ -153,62 +166,7 @@ td{
     background:#09C9D9;
 }
 
-/* Making width and height of each column stable for left table*/
-#leftTable .From{
-    width:30%;
-}
-
-#leftTable .To{
-    width:30%;
-}
-
-#leftTable .Passengers{
-    width:10%;
-}
-
-#leftTable .Accom{
-    width: 20%; /*can be even smaller*/
-}
-
-#leftTable .Time{
-    width:10%;
-}
-
-/* Making width and height of each column stable for right table*/
-.rightTable .From{
-    width:30%;
-}
-
-.rightTable .To{
-    width:30%;
-}
-
-.rightTable .Passengers{
-    width:10%;
-}
-
-.rightTable .Accom{
-    width: 10%;
-}
-
-.rightTable .vanNo{
-    width: 10%;
-}
-
-.rightTable .Time{
-    width:10%;
-}
-
-
-/* alternate color of table entries*/
-#leftTable tr:nth-child(even) td{
-    background-color:#e0858e;
-}
-
-#leftTable tr:nth-child(odd) td{
-    background-color:#DCDCDC;
-}
-
+/* alternate color of table entries */
 .rightTable tr:nth-child(even) td{
     background-color:#85e0d0;
 }
@@ -217,7 +175,10 @@ td{
     background-color:#DCDCDC;
 }
 
-/* Tooltip style */
+/* Tooltip styles
+    td with tooltip will be in the class hasTooltip
+*/
+
 .hasTooltip span {
     display: none;
     text-decoration: none;
@@ -232,7 +193,7 @@ td{
     margin: 2px 10px;
 }
 
-/*make tooltip box to have max width*/
+/*set max width and white space for tooltip*/
 table span{
     max-width: 200px;
     white-space: normal;
