Tweaked colors for index, addRequest, and Archive pages

--- a/views/addRequest.css
+++ b/views/addRequest.css
@@ -28,7 +28,7 @@ body {
 }
 nav {
     background: #aaa;
-    box-shadow: 0px 5px 0px #2eb89e;
+    box-shadow: 0px 5px 0px #80b3ff;
 }
 nav ul {
     list-style: none;
