--- a/views/addRequest.css
+++ b/views/addRequest.css
@@ -37,23 +37,19 @@ nav ul {
 }
 nav ul li {
     display: inline-block;
-    margin-left: -50%;
+
 }
 nav ul li a {
     display: block;
     text-decoration: none;
-    color: black;
+    color: white;
     font-weight: 800;
     font-size: larger;
     box-sizing: border-box;
 }
-nav ul li a,
-nav ul li a:after,
-nav ul li a:before {
-    transition: all 1s;
-}
+
 nav ul li a:hover {
-     color: white;
+     color: gray;
  }
 
 
@@ -63,3 +59,4 @@ h2 {
     text-align: center;
     padding-bottom: 8px;
 }
+
