--- a/views/addRequest.ejs
+++ b/views/addRequest.ejs
@@ -8,7 +8,7 @@
     <title>SNAP Dispatcher</title>
     <link rel="icon" href="WPI_logo.png">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Roboto:500,900,100,300,700,400' rel='stylesheet'
@@ -31,34 +31,33 @@
     <form action="/submitRequest" method="post">
 
         <div class="form-group">
-            <label>Ride Going To:</label>
-            <input type="text" class="form-control" name="goingTo">
+            <label for="rideGoingTo">Ride Going To:</label>
+            <input id="rideGoingTo" type="text" class="form-control" name="goingTo" placeholder="Enter the destination" required maxlength="150">
         </div>
 
         <div class="form-group">
-            <label>Ride Coming From:</label>
-            <input type="text" class="form-control" name="comingFrom">
+            <label for="rideComingFrom">Ride Coming From:</label>
+            <input id="rideComingFrom" type="text" class="form-control" name="comingFrom" placeholder="Enter the place to pick up" required maxlength="150">
         </div>
 
         <div class="form-group">
-            <label>Number of Passengers:</label>
-            <input type="number" class="form-control" min="0" max="5" name="numPassengers">
+            <label for="numberOfPassengers">Number of Passengers:</label>
+            <input id="numberOfPassengers" type="number" class="form-control" min="1" max="5" name="numPassengers">
         </div>
 
         <label>Are Accommodations Needed?</label>
         <div class="form-group">
-            <label class="radio-inline" for="yesCheck">
+            <label class="radio-inline" for="yesCheck">Yes</label>
+            <input type="radio" class="form-check-input" onclick="javascript:yesnoCheck();" name="yesno"
+                       id="yesCheck">
+
+            <label class="radio-inline" for="noCheck">No</label>
                 <input type="radio" class="form-check-input" onclick="javascript:yesnoCheck();" name="yesno"
-                       id="yesCheck">Yes
-            </label>
-            <label class="radio-inline" for="noCheck">
-                <input type="radio" class="form-check-input" onclick="javascript:yesnoCheck();" name="yesno"
-                       id="noCheck" checked>No
-            </label>
+                       id="noCheck" checked>
         </div>
         <div class="form-group" id="ifYes" style="visibility:hidden">
-            <label>Insert Accommodations Below:</label>
-            <input type="text" class="form-control" name="accommodations">
+            <label for="accomodations">Insert Accommodations Below:</label>
+            <input id="accomodations" type="text" class="form-control" name="accommodations">
         </div>
 
         <div class="form-group text-center">
@@ -73,18 +72,19 @@
             document.getElementById('ifYes').style.visibility = 'visible';
         }
         else document.getElementById('ifYes').style.visibility = 'hidden';
+
     }
 </script>
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+ <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+                integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+                crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
+                integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+                crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
+                integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+                crossorigin="anonymous"></script>
 </body>
 
 </html>
+
