--- a/views/deleteNewRequest.ejs
+++ b/views/deleteNewRequest.ejs
@@ -8,7 +8,7 @@
     <title>SNAP Dispatcher</title>
     <link rel="icon" href="WPI_logo.png">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
@@ -33,33 +33,33 @@
     <form action="/submitDeleteNewRequest" method="post">
 
         <div class="form-group">
-            <label>Request ID:</label>
-            <input type="text" class="form-control" value="<%= request.idnewRequests%>" name="requestID">
+            <label for="requestID">Request ID:</label>
+            <input id="requestID" type="text" class="form-control" value="<%= request.idnewRequests%>" name="requestID">
         </div>
 
         <div class="form-group">
-            <label>Ride Going To:</label>
-            <input type="text" class="form-control" value="<%= request.rideTo%>" name="goingTo">
+            <label for="rideGoingTo">Ride Going To:</label>
+            <input id="rideGoingTo" type="text" class="form-control" value="<%= request.rideTo%>" name="goingTo">
         </div>
 
         <div class="form-group">
-            <label>Ride Coming From:</label>
-            <input type="text" class="form-control" value="<%= request.rideFrom%>" name="comingFrom">
+            <label for="rideComingFrom">Ride Coming From:</label>
+            <input id="rideComingFrom" type="text" class="form-control" value="<%= request.rideFrom%>" name="comingFrom">
         </div>
 
         <div class="form-group">
-            <label>Number of Passengers:</label>
-            <input type="number" class="form-control" min="0" value="<%= request.numPassengers%>" name="numPassengers">
+            <label for="numberOfPassengers">Number of Passengers:</label>
+            <input id="numberOfPassengers" type="number" class="form-control" min="0" value="<%= request.numPassengers%>" name="numPassengers">
         </div>
 
         <div class="form-group">
-            <label>Any Accommodations:</label>
-            <input type="text" class="form-control" value="<%= request.accommodations%>" name="accommodations">
+            <label for="accomodations">Any Accommodations:</label>
+            <input id="accomodations" type="text" class="form-control" value="<%= request.accommodations%>" name="accommodations">
         </div>
 
         <div class="form-group">
-            <label>Time Received:</label>
-            <input type="text" class="form-control" value="<%= request.timeIn%>" name="timeIn">
+            <label for="timeReceived">Time Received:</label>
+            <input id="timeReceived" type="text" class="form-control" value="<%= request.timeIn%>" name="timeIn">
         </div>
 
         <div class="form-group text-center">
