Small changes to addRequest and assignNewRequest page. Made admin files, will make another branch to work on this.
todos: change styles for other forms consistency.

--- a/views/assignNewRequest.ejs
+++ b/views/assignNewRequest.ejs
@@ -12,8 +12,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="assignNewRequest.css">
+    <link rel="stylesheet" type="text/css" href="assignNewRequest.css">
 </head>
+
 <body>
 
 <nav style="background-color: #ac2b37" class="navbar navbar-default">
@@ -65,7 +66,7 @@
 
         <div class="form-group">
             <fieldset>
-                <legend>Assign Van Number:</legend>
+                <legend style="font-size: 16px">Assign Van Number:</legend>
                     <div class="form-check form-check-inline">
                         <input type="radio" name="vanNumber" id="vanNumber1" value="1">
                         <label class="form-check-label" for="vanNumber1">1</label>
