--- a/views/addRequest.ejs
+++ b/views/addRequest.ejs
@@ -47,13 +47,14 @@
 
         <label>Are Accommodations Needed?</label>
         <div class="form-group">
-            <label class="radio-inline" for="yesCheck">Yes</label>
-            <input type="radio" class="form-check-input" onclick="javascript:yesnoCheck();" name="yesno"
-                       id="yesCheck">
-
-            <label class="radio-inline" for="noCheck">No</label>
-                <input type="radio" class="form-check-input" onclick="javascript:yesnoCheck();" name="yesno"
-                       id="noCheck" checked>
+            <div class="form-check form-check-inline">
+                <input type="radio" class="form-check-input" onclick="javascript:yesnoCheck();" name="yesno" id="yesCheck">
+                <label class="radio-inline" for="yesCheck">Yes</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input type="radio" class="form-check-input" onclick="javascript:yesnoCheck();" name="yesno" id="noCheck" checked>
+                <label class="radio-inline" for="noCheck">No</label>
+            </div>
         </div>
         <div class="form-group" id="ifYes" style="visibility:hidden">
             <label for="accomodations">Insert Accommodations Below:</label>
