--- a/views/assignNewRequest.css
+++ b/views/assignNewRequest.css
@@ -1,4 +1,8 @@
-/****************** Form Styles **************/
+body {
+    font-family: 'Roboto', sans-serif;
+    padding: 0;
+    margin: 0;
+}
 
 .form {
     width: 800px;
@@ -44,7 +48,7 @@ li a {
 
 /* Change the link color to #111 (black) on hover */
 nav div div a:hover {
-    background-color: gray;
+    background-color: black;
 }
 
 /* Navbar Styles */
