Added admin page, temporary with Check/Edit van status page and export archive to csv. Maintenance page now only shows vans those are in maintenance. Made few style changes to the files not related to admin.
TODOs: 	Add edit button to van status page.
		Make export to csv work/ find other way to do something similar.
		Classify requests as completed, rejected, and no-shown when delete the request from the table.

--- a/views/archive.css
+++ b/views/archive.css
@@ -30,7 +30,7 @@ nav ul li a {
 }
 
 li a:hover {
-    color: gray;
+    background-color: gray;
 }
 
 /* END: Navbar Styles */
@@ -44,6 +44,10 @@ h2 {
 table {
     border-collapse: collapse;
     width: 100%;
+}
+
+th{
+    background-color: #8B8E81;
 }
 
 td {
