--- a/views/index.ejs
+++ b/views/index.ejs
@@ -66,7 +66,7 @@
             </div>
             <nav class="menuNav">
                 <a href="/viewArchive" class="menuItem">View Archive</a>
-                <a href="/maintenance" class = "menuItem">Van Maintenance</a>
+                <a href="/maintenance" class = "menuItem">Van in Maintenance</a>
                 <a href="/admin" class ="menuItem">Admin</a>
                 <a href="#" class="menuItem">Log off</a>
             </nav>
