Added edit Van Status(need some fix) Added status to archived requests Changed file names to clarify.
ToDos
fix edit van status
make id uneditable
refresh the table after export to csv or excel

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -34,7 +34,8 @@
     <ul class="menuList">
         <li><a href="/vanStatus" class="menuItem">Check/Edit Van Status</a></li>
         <li><a href="#" class="menuItem"> Export Archive to csv</a></li>
-        <li><a href="#" class="menuItem"></a></li>
+        <li><a href="#" class="menuItem">Add a Van</a></li>
+        <li><a href="#" class="menuItem"> </a></li>
 
     </ul>
 </div>
