--- a/views/archive.ejs
+++ b/views/archive.ejs
@@ -40,6 +40,7 @@
                 <th class="archiveAccom">Accommodations</th>
                 <th class="archiveVanNo">Van No.</th>
                 <th class="archiveTime">Time Received</th>
+                <th class="status">Status</th>
             </tr>
 
             <% archivedRequestRows.forEach(function (row) { %>
@@ -51,6 +52,7 @@
                     <td class="archiveAccom"><%= row.accommodations %></td>
                     <td class="archiveVanNo"><%= row.vanNumber %></td>
                     <td class="archiveTime"><%= row.timeIn.slice(4, 21) %></td>
+                    <td class="status"> <%=row.status %></td>
                 </tr>
             <% }); %>
 
