--- a/views/completeProcessRequest.ejs
+++ b/views/completeProcessRequest.ejs
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/completeProcessRequest.css">
 
 </head>
 <body>
@@ -22,19 +23,18 @@
         </div>
 
         <div style="float:right" class="navbar-header">
-            <a style="color: white" class="navbar-brand clickable-modify" data-id='/assignNewRequest/<%=request.idnewRequests %>'>Assign Request</a>
+            <a style="color: white" class="navbar-brand clickable-modify" data-id='/assignProcessRequest/<%=request.idinProcessRequests %>'>Back to Assign Request</a>
         </div>
     </div>
 </nav>
 
 <div class="container" style="align-content: center">
-
-    <h2 style="text-align: center">Delete Ride Request</h2>
-    <form action="/submitDeleteNewRequest" method="post">
+    <h2 style="text-align: center">Complete Ride Request</h2>
+    <form action="/submitCompleteProcessRequest" method="post">
 
         <div class="form-group">
-            <label for="requestID">Request ID:</label>
-            <input id="requestID" type="text" class="form-control" value="<%= request.idnewRequests%>" name="requestID">
+            <label for="requstID">Request ID:</label>
+            <input id="requstID" type="text" class="form-control" value="<%= request.idinProcessRequests%>" name="requestID">
         </div>
 
         <div class="form-group">
@@ -49,7 +49,7 @@
 
         <div class="form-group">
             <label for="numberOfPassengers">Number of Passengers:</label>
-            <input id="numberOfPassengers" type="number" class="form-control" min="0" value="<%= request.numPassengers%>" name="numPassengers">
+            <input id="numberOfPassengers" type="number" class="form-control" min="0" max="5" value="<%= request.numPassengers%>" name="numPassengers">
         </div>
 
         <div class="form-group">
@@ -62,8 +62,14 @@
             <input id="timeReceived" type="text" class="form-control" value="<%= request.timeIn%>" name="timeIn">
         </div>
 
+        <div class="form-group">
+            <label for="vanNumber">Van Number:</label>
+            <input id="vanNumber" type="text" class="form-control" value="<%= request.vanNumber%>" name="vanNumber">
+        </div>
+
         <div class="form-group text-center">
-            <input type="submit" id="submit" class="btn btn-secondary btn-lg btn-danger" value="Delete Request">
+            <input type="submit" id="submit" class="btn btn-secondary btn-lg btn-danger" value="Complete Request">
+            <input type="submit" id="submit" class="btn btn-secondary btn-lg btn-danger" formaction="/submitNoShowProcessRequest" value="Report No-Show">
         </div>
     </form>
 </div>
