--- a/views/index.css
+++ b/views/index.css
@@ -61,7 +61,7 @@ ul h3 {
 nav.menuNav {
     width: 300px;
     min-height: calc(100vh - 120px);
-    background-color: #317df7;
+    background-color: #317df7; /*pick better color*/
     position: absolute;
     top: 9vh;
     right: 0;
