--- a/views/rejectNewRequest.ejs
+++ b/views/rejectNewRequest.ejs
@@ -22,18 +22,19 @@
         </div>
 
         <div style="float:right" class="navbar-header">
-            <a style="color: white" class="navbar-brand clickable-modify" data-id='/assignProcessRequest/<%=request.idinProcessRequests %>'>Assign Request</a>
+            <a style="color: white" class="navbar-brand clickable-modify" data-id='/assignNewRequest/<%=request.idnewRequests %>'>Assign Request</a>
         </div>
     </div>
 </nav>
 
 <div class="container" style="align-content: center">
-    <h2 style="text-align: center">Delete Ride Request</h2>
-    <form action="/submitDeleteProcessRequest" method="post">
+
+    <h2 style="text-align: center">Reject Ride Request</h2>
+    <form action="/submitRejectNewRequest" method="post">
 
         <div class="form-group">
-            <label for="requstID">Request ID:</label>
-            <input id="requstID" type="text" class="form-control" value="<%= request.idinProcessRequests%>" name="requestID">
+            <label for="requestID">Request ID:</label>
+            <input id="requestID" type="text" class="form-control" value="<%= request.idnewRequests%>" name="requestID">
         </div>
 
         <div class="form-group">
@@ -48,7 +49,7 @@
 
         <div class="form-group">
             <label for="numberOfPassengers">Number of Passengers:</label>
-            <input id="numberOfPassengers" type="number" class="form-control" min="0" max="5" value="<%= request.numPassengers%>" name="numPassengers">
+            <input id="numberOfPassengers" type="number" class="form-control" min="0" value="<%= request.numPassengers%>" name="numPassengers">
         </div>
 
         <div class="form-group">
@@ -61,13 +62,8 @@
             <input id="timeReceived" type="text" class="form-control" value="<%= request.timeIn%>" name="timeIn">
         </div>
 
-        <div class="form-group">
-            <label for="vanNumber">Van Number:</label>
-            <input id="vanNumber" type="text" class="form-control" value="<%= request.vanNumber%>" name="vanNumber">
-        </div>
-
         <div class="form-group text-center">
-            <input type="submit" id="submit" class="btn btn-secondary btn-lg btn-danger" value="Delete Request">
+            <input type="submit" id="submit" class="btn btn-secondary btn-lg btn-danger" value="Reject Request">
         </div>
     </form>
 </div>
