Made some parts (mostly ID and time) readonly Added more functionalities to archive table by using the datatable plug-in Fixed some styles in editVanStatus page. editVanStatus has radio button for isMaintenanced.
ToDos
Add refresh table
Add export to csv on archive page, and delete from admin page
Add last modified time column to requests
Link the van status and vans' selectability on assignNewRequest page.

--- a/views/archive.css
+++ b/views/archive.css
@@ -56,8 +56,12 @@ td {
 }
 
 /* alternate color of table entries*/
-table tr:nth-child(even) td{
+table tr:nth-child(odd) td{
     background-color:#ffbbbc;
+}
+
+table tr:nth-child(even) td{
+    background-color:#DCDCDC;
 }
 
 .archiveID {
