--- a/views/rejectNewRequest.ejs
+++ b/views/rejectNewRequest.ejs
@@ -34,7 +34,7 @@
 
         <div class="form-group">
             <label for="requestID">Request ID:</label>
-            <input id="requestID" type="text" class="form-control" value="<%= request.idnewRequests%>" name="requestID">
+            <input id="requestID" type="text" class="form-control" value="<%= request.idnewRequests%>" name="requestID" readonly>
         </div>
 
         <div class="form-group">
@@ -59,7 +59,7 @@
 
         <div class="form-group">
             <label for="timeReceived">Time Received:</label>
-            <input id="timeReceived" type="text" class="form-control" value="<%= request.timeIn%>" name="timeIn">
+            <input id="timeReceived" type="text" class="form-control" value="<%= request.timeIn%>" name="timeIn" readonly>
         </div>
 
         <div class="form-group text-center">
