--- a/views/archive.ejs
+++ b/views/archive.ejs
@@ -8,10 +8,14 @@
     <title>SNAP Dispatcher</title>
     <link rel="icon" href="WPI_logo.png">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
+
+
     <link href='https://fonts.googleapis.com/css?family=Roboto:500,900,100,300,700,400' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.css">
     <link rel="stylesheet" href="archive.css">
 </head>
 <body>
@@ -31,39 +35,45 @@
     <h2><b>Ride Request Archive</b></h2>
     <!-- Archive Table -->
     <div>
-        <table>
-            <tr>
-                <th class="archiveID">Ride ID</th>
-                <th class="archiveFrom">From</th>
-                <th class="archiveTo">To</th>
-                <th class="archivePassengers">No. Passengers</th>
-                <th class="archiveAccom">Accommodations</th>
-                <th class="archiveVanNo">Van No.</th>
-                <th class="archiveTime">Time Received</th>
-                <th class="status">Status</th>
-            </tr>
-
-            <% archivedRequestRows.forEach(function (row) { %>
+        <table id="archiveTable">
+            <thead>
                 <tr>
-                    <td class="archiveID"><%= row.idarchivedRequests %></td>
-                    <td class="archiveFrom"><%= row.rideFrom %></td>
-                    <td class="archiveTo"><%= row.rideTo %></td>
-                    <td class="archivePassengers"><%= row.numPassengers %></td>
-                    <td class="archiveAccom"><%= row.accommodations %></td>
-                    <td class="archiveVanNo"><%= row.vanNumber %></td>
-                    <td class="archiveTime"><%= row.timeIn.slice(4, 21) %></td>
-                    <td class="status"> <%=row.status %></td>
+                    <th class="archiveID">Ride ID</th>
+                    <th class="archiveFrom">From</th>
+                    <th class="archiveTo">To</th>
+                    <th class="archivePassengers">No. Passengers</th>
+                    <th class="archiveAccom">Accommodations</th>
+                    <th class="archiveVanNo">Van No.</th>
+                    <th class="archiveTime">Time Received</th>
+                    <th class="status">Status</th>
                 </tr>
-            <% }); %>
-
+            </thead>
+            <tbody>
+                <% archivedRequestRows.forEach(function (row) { %>
+                    <tr>
+                        <td class="archiveID"><%= row.idarchivedRequests %></td>
+                        <td class="archiveFrom"><%= row.rideFrom %></td>
+                        <td class="archiveTo"><%= row.rideTo %></td>
+                        <td class="archivePassengers"><%= row.numPassengers %></td>
+                        <td class="archiveAccom"><%= row.accommodations %></td>
+                        <td class="archiveVanNo"><%= row.vanNumber %></td>
+                        <td class="archiveTime"><%= row.timeIn.slice(4, 21) %></td>
+                        <td class="status"> <%=row.status %></td>
+                    </tr>
+                <% }); %>
+            </tbody>
         </table>
     </div>
 
 </div>
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+
+<script>
+    $(document).ready(function(){
+    $('#archiveTable').DataTable()
+});
+</script>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
         integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
