--- a/views/assignNewRequest.ejs
+++ b/views/assignNewRequest.ejs
@@ -36,7 +36,7 @@
 
         <div class="form-group">
             <label for="requestID">Request ID:</label>
-            <input id="requestID" type="text" class="form-control" value="<%= request.idnewRequests%>" name="requestID">
+            <input id="requestID" type="text" class="form-control" value="<%= request.idnewRequests%>" name="requestID" readonly>
         </div>
 
         <div class="form-group">
@@ -61,7 +61,7 @@
 
         <div class="form-group">
             <label for="timeReceived">Time Received:</label>
-            <input id="timeReceived" type="text" class="form-control" value="<%= request.timeIn%>" name="timeIn">
+            <input id="timeReceived" type="text" class="form-control" value="<%= request.timeIn%>" name="timeIn" readonly>
         </div>
 
         <div class="form-group">
