--- a/views/assignProcessRequest.ejs
+++ b/views/assignProcessRequest.ejs
@@ -23,7 +23,7 @@
         </div>
 
         <div style="float:right " class="navbar-header">
-            <a style="color: white" class="navbar-brand clickable-delete" data-id='/deleteProcessRequest/<%=request.idinProcessRequests %>'>Complete Request or No-Show Report</a>
+            <a style="color: white" class="navbar-brand clickable-delete" data-id='/deleteProcessRequest/<%=request.idinProcessRequests %>'>Complete Request</a>
         </div>
     </div>
 </nav>
@@ -35,7 +35,7 @@
 
         <div class="form-group">
             <label for="requestID">Request ID:</label>
-            <input id="requestID" type="text" class="form-control" value="<%= request.idinProcessRequests%>" name="requestID">
+            <input id="requestID" type="text" class="form-control" value="<%= request.idinProcessRequests%>" name="requestID" readonly>
         </div>
 
         <div class="form-group">
@@ -60,7 +60,7 @@
 
         <div class="form-group">
             <label for="timeReceived">Time Received:</label>
-            <input id="timeReceived" type="text" class="form-control" value="<%= request.timeIn%>" name="timeIn">
+            <input id="timeReceived" type="text" class="form-control" value="<%= request.timeIn%>" name="timeIn" readonly>
         </div>
 
         <div class="form-group">
