--- a/views/completeProcessRequest.ejs
+++ b/views/completeProcessRequest.ejs
@@ -34,37 +34,37 @@
 
         <div class="form-group">
             <label for="requstID">Request ID:</label>
-            <input id="requstID" type="text" class="form-control" value="<%= request.idinProcessRequests%>" name="requestID">
+            <input id="requstID" type="text" class="form-control" value="<%= request.idinProcessRequests%>" name="requestID" readonly>
         </div>
 
         <div class="form-group">
             <label for="rideGoingTo">Ride Going To:</label>
-            <input id="rideGoingTo" type="text" class="form-control" value="<%= request.rideTo%>" name="goingTo">
+            <input id="rideGoingTo" type="text" class="form-control" value="<%= request.rideTo%>" name="goingTo" readonly>
         </div>
 
         <div class="form-group">
             <label for="rideComingFrom">Ride Coming From:</label>
-            <input id="rideComingFrom" type="text" class="form-control" value="<%= request.rideFrom%>" name="comingFrom">
+            <input id="rideComingFrom" type="text" class="form-control" value="<%= request.rideFrom%>" name="comingFrom" readonly>
         </div>
 
         <div class="form-group">
             <label for="numberOfPassengers">Number of Passengers:</label>
-            <input id="numberOfPassengers" type="number" class="form-control" min="0" max="5" value="<%= request.numPassengers%>" name="numPassengers">
+            <input id="numberOfPassengers" type="number" class="form-control" min="0" max="5" value="<%= request.numPassengers%>" name="numPassengers" readonly>
         </div>
 
         <div class="form-group">
             <label for="accomodations">Any Accommodations:</label>
-            <input id="accomodations" type="text" class="form-control" value="<%= request.accommodations%>" name="accommodations">
+            <input id="accomodations" type="text" class="form-control" value="<%= request.accommodations%>" name="accommodations" readonly>
         </div>
 
         <div class="form-group">
             <label for="timeReceived">Time Received:</label>
-            <input id="timeReceived" type="text" class="form-control" value="<%= request.timeIn%>" name="timeIn">
+            <input id="timeReceived" type="text" class="form-control" value="<%= request.timeIn%>" name="timeIn" readonly>
         </div>
 
         <div class="form-group">
             <label for="vanNumber">Van Number:</label>
-            <input id="vanNumber" type="text" class="form-control" value="<%= request.vanNumber%>" name="vanNumber">
+            <input id="vanNumber" type="text" class="form-control" value="<%= request.vanNumber%>" name="vanNumber" readonly>
         </div>
 
         <div class="form-group text-center">
