--- a/views/editVanStatus.css
+++ b/views/editVanStatus.css
@@ -9,17 +9,6 @@ body {
     margin: 50px auto 20px;
 }
 
-.formField {
-    width: 100%;
-    height: 60px;
-    background: none;
-    border: none;
-    border-bottom: 1px solid #34495e;
-    outline: none;
-    font: 300 28px 'Lato', sans-serif;
-    padding: 20px;
-    color: #34495e;
-}
 
 ul h3 {
     text-align: center;
@@ -44,14 +33,30 @@ li a {
     text-align: center;
     padding: 20px 16px;
     text-decoration: none;
+    font-weight: 800;
+    font-size:20px;
+
 }
 
 /* Change the link color to #111 (black) on hover */
-nav div div a:hover {
+a:hover {
     background-color: gray;
 }
 
+h2 {
+    text-align: center;
+    padding-bottom: 8px;
+    margin-top:20px;
+}
+
+
 /* Navbar Styles */
+
+nav {
+    background: #aaa;
+    box-shadow: 0px 5px 0px #80b3ff;
+}
+
 .navbar {
     background-color: #ac2b37;
 
@@ -65,3 +70,10 @@ nav div div a:hover {
 .navbar-brand{
     color: white;
 }
+
+/*End Nav bar style*/
+
+.form-label{
+    font: 300 16px 'Lato', sans-serif ;
+}
+
